--- a/KTX_HUFI_2023/Views/Shared/_Layout.cshtml
+++ b/KTX_HUFI_2023/Views/Shared/_Layout.cshtml
@@ -172,8 +172,8 @@
                         <!-- Khi chưa đăng nhập -->
 
                         <div class="header-top-right_register_login hide-on-mobile">
-                            <a href="./register.html" class="btn_page btn-Register">Đăng ký</a>
-                            <a href="./login.html" class="btn_page btn-login">Đăng nhập</a>
+                            <a href="~/Account/Register" class="btn_page btn-Register">Đăng ký</a>
+                            <a href="~/Account/Login" class="btn_page btn-login">Đăng nhập</a>
                         </div>
 
                         <!-- Khi đã đăng nhập -->
@@ -330,8 +330,8 @@
             <span class="model-main-menu-name-line hide-on-tablet"></span>
             <!-- Nếu chưa đăng nhập -->
             <div class="model-main-menu-btn hide-on-tablet">
-                <a class="btn btn-login-mobile">Đăng nhập</a>
-                <a class="btn btn-register-mobile">Đăng ký</a>
+                <a href="~/Account/Login" class="btn btn-login-mobile">Đăng nhập</a>
+                <a href="~/Account/Register" class="btn btn-register-mobile">Đăng ký</a>
             </div>
 
             <!-- Nếu đăng nhập rồi -->
