--- a/KTX_HUFI_2023/Views/Account/Register.cshtml
+++ b/KTX_HUFI_2023/Views/Account/Register.cshtml
@@ -43,7 +43,7 @@
             <div class="row">
                 <form action="" class="baner-contact-form" method="">
                     <div class="row">
-                        <h2 class="baner-contact-form-title">Đăng ký</h2>
+                        <h2 class="baner-contact-form-title">Đăng ký nha</h2>
                     </div>
                     <div class="row">
                         <div class="baner-contact-form-text-field">
