--- a/KTX_HUFI_2023/Views/Shared/_LayoutAlumnus.cshtml
+++ b/KTX_HUFI_2023/Views/Shared/_LayoutAlumnus.cshtml
@@ -116,58 +116,7 @@
                     </div>
                 </div>
             </div>
-            <nav class="sidebar sidebar-offcanvas" id="sidebar">
-                <ul class="nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">
-                            <i class="icon-grid menu-icon"></i>
-                            <span class="menu-title">Trang chủ</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="profile.html">
-                            <i class="icon-head menu-icon"></i>
-                            <span class="menu-title">Hồ sơ sinh viên</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="join.html">
-                            <i class="fa-light fa-feather-pointed menu-icon"></i>
-                            <span class="menu-title">Gia nhập</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="form_download.htmll">
-                            <i class="icon-paper menu-icon"></i>
-                            <span class="menu-title">Biễu mẫu</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/documentation/documentation.html">
-                            <i class="icon-paper menu-icon"></i>
-                            <span class="menu-title">Nội quy - quy định</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fa-light fa-money-bills menu-icon"></i>
-                            <span class="menu-title">Thanh toán - Hóa đơn</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fa-light fa-flag menu-icon"></i>
-                            <span class="menu-title">Liên hệ</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fa-sharp fa-solid fa-do-not-enter menu-icon"></i>
-                            <span class="menu-title">Vi phạm </span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            @RenderSection("rightSiteBar",required:false)
             <!-- partial -->
             <div class="main-panel">
                 <div class="content-wrapper">
